# adam

./: .env.sample  Dockerfile  README.MD  README.md  adam.code-workspace  compose.yml  docker-compose.yml  mcp_server.py  pyproject.toml  serv.py
adk/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt  run_all_agents.sh
adk/agent/: agent.py  instructions.py
adk/broker_agent/: agent.py  instructions.py
adk/cashanova/: agent.py
adk/clocknstock/: agent.py
adk/code_agent/: agent.py  instructions.py
adk/dailydrip/: agent.py
adk/data_analyst/: agent.py
adk/drawer/: agent.py
adk/home_sensor_agent/: agent.py  instructions.py
adk/news_agent/: agent.py  instructions.py
adk/remote/: agent.py
adk/stock_agent/: agent.py  instructions.py
adk/time_agent/: agent.py  instructions.py
adk/timekeeper/: agent.py
adk/tradingadvisor/: agent.py  instructions.py
adk/tradingguru/: agent.py
adk/weather_agent/: agent.py  instructions.py
agents/: .env.example  README.md  README.old.md  pyproject.toml
agents/agent-cashanova/: pyproject.toml
agents/agent-cashanova/app/: agent.py  agent_engine_app.py
agents/agent-cashanova/app/utils/: tracing.py  typing.py
agents/agent-dailydrip/.cloudbuild/: staging.yaml
agents/agent-dailydrip/app/utils/: tracing.py
agents/agent-dailydrip/deployment/terraform/: variables.tf
agents/agent-dailydrip/deployment/terraform/vars/: env.tfvars
agents/agent-drawer/: pyproject.toml
agents/agent-drawer/.backup_agent-drawer_20250817_204526/app/: agent.py
agents/agent-drawer/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agents/agent-drawer/app/: agent_engine_app.py
agents/agent-drawer/app/utils/: typing.py
agents/agent-freshnews/: README.md
agents/agent-freshnews/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agents/agent-freshnews/app/: agent_engine_app.py
agents/agent-freshnews/deployment/terraform/dev/: variables.tf
agents/agent-freshnews/deployment/terraform/vars/: env.tfvars
agents/agent-search/: README.md  pyproject.toml
agents/agent-search/.backup_agent-search_20250817_204448/: prompt.py
agents/agent-search/.cloudbuild/: pr_checks.yaml
agents/agent-search/app/: agent_engine_app.py
agents/agent-search/deployment/terraform/: variables.tf
agents/agent-search/deployment/terraform/dev/: variables.tf
agents/agent-stockwhisperer/: README.md
agents/agent-stockwhisperer/.cloudbuild/: pr_checks.yaml
agents/agent-stockwhisperer/app/utils/: tracing.py  typing.py
agents/agent-stockwhisperer/deployment/terraform/vars/: env.tfvars
agents/agent-timekeeper/: .gitignore  Makefile  README.md  pyproject.toml
agents/agent-timekeeper/app/: agent.py
agents/agent-timekeeper/app/utils/: tracing.py  typing.py
agents/agent-timekeeper/deployment/terraform/dev/: variables.tf
agents/agent-timekeeper/deployment/terraform/vars/: env.tfvars
agents/agent-tradingguru/.backup_agent-tradingguru_20250817_204638/app/: agent.py
agents/agent-tradingguru/.cloudbuild/: staging.yaml
agents/agent-tradingguru/app/: agent_engine_app.py
agents/agent-tradingguru/app/utils/: typing.py
agents/agent-tradingguru/deployment/terraform/: variables.tf
agents/agent-tradingguru/deployment/terraform/dev/: variables.tf
agents/cashanova/: README.md  agent.py
agents/cashanova/deployment/terraform/: variables.tf
agents/cashanova/deployment/terraform/dev/: variables.tf
agents/cashanova/deployment/terraform/vars/: env.tfvars
agents/cashanova/tests/unit/: agent_test.py
agents/clocknstock/: agent.py
agents/dailydrip/: README.md  agent.py  pyproject.toml
agents/dailydrip/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml
agents/dailydrip/app/: agent_engine_app.py
agents/dailydrip/app/utils/: typing.py
agents/dailydrip/deployment/terraform/dev/: variables.tf
agents/data_analyst/: agent.py
agents/drawer/: README.md  agent.py
agents/drawer/app/utils/: tracing.py
agents/drawer/deployment/terraform/: variables.tf
agents/drawer/deployment/terraform/dev/: variables.tf
agents/drawer/deployment/terraform/vars/: env.tfvars
agents/freshnews/: agent.py  pyproject.toml
agents/freshnews/app/utils/: tracing.py  typing.py
agents/freshnews/deployment/terraform/: variables.tf
agents/search/.cloudbuild/: deploy-to-prod.yaml  staging.yaml
agents/search/app/utils/: tracing.py  typing.py
agents/stockwhisperer/: agent.py  pyproject.toml
agents/stockwhisperer/.cloudbuild/: deploy-to-prod.yaml  staging.yaml
agents/stockwhisperer/app/: agent_engine_app.py
agents/stockwhisperer/deployment/terraform/: variables.tf
agents/timekeeper/: Makefile  README.md  agent.py  pyproject.toml
agents/timekeeper/app/: agent_engine_app.py
agents/timekeeper/deployment/terraform/: variables.tf
agents/timekeeper/tests/unit/: agent_test.py
agents/tradingguru/: README.md  agent.py  pyproject.toml
agents/tradingguru/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml
agents/tradingguru/app/utils/: tracing.py
agentz/: pyproject.toml
langgraph/: .gitignore  README.md  postgresql.conf  pyproject.toml
langgraph/src/: agent.py  prompt.py
mcp-server/: .env.example  .gitignore  Dockerfile  README.md  adam-sa.json.example  anythingllm.md  compose.yml  mcp_server.py  myreadme.md  pyproject.toml  requirements.txt  server.py
mcp-server/tools/: __init__.py  code_interpreter.py  corpora_search.py  corpora_search.py.dis  datetime_info.py  exchange_rate.py  home_sensors.py  news.py  plotter.py  stocks_data.py  weather.py
ui/: .env.example  .gitignore  Dockerfile  FEATURES.md  README.md  app.py  config.py  index.html  package-lock.json  package.json  pyproject.toml  run.sh  tailwind.config.js
ui/src/: App.jsx  index.css
ui/src/components/: ChatInput.jsx  Dashboard.jsx  EmptyState.jsx  Header.jsx  Sidebar.jsx  Widget.jsx
ui/src/components/widgets/: ErrorWidget.jsx  ImageWidget.jsx  TableWidget.jsx  TextWidget.jsx
ui/src/services/: api.js
(+63 files in other folders)
