[project]
name = "adam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-adk>=0.1.0",
    "google-genai>=1.10.0",
    "litellm>=1.73.2",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "starlette>=0.46.2",
]
