[project]
name = "adam"
version = "0.1.0"
description = "Adam assistant, a personal assistant for your daily tasks"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "cloudpickle>=3.1.1",
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "google-adk>=1.9.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.106.0",
    "google-genai>=1.28.0",
    "litellm>=1.73.2",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.12.3",
    "plotly>=6.2.0",
    "requests>=2.32.3",
    "toml-to-requirements>=0.3.0",
]
