[project]
name = "langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-azure-ai>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.1",
    "langchain[anthropic]>=1.0.2",
    "langgraph-cli[inmem]>=0.4.5",
]
