[project]
name = "langx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google-genai>=3.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.1",
    "langchain[anthropic]>=1.0.2",
    "langgraph-api>=0.5.27",
    "langgraph-cli[inmem]>=0.4.5",
]
