[project]
name = "langx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.0.1",
    "langchain[anthropic]>=1.0.2",
    "langgraph-api>=0.5.27",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langgraph-cli[inmem]>=0.4.5",
    "psycopg-binary>=3.3.2",
]
