[project]
name = "adam-tools"
version = "0.1.0"
description = "Tools that can be used by the Adam agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.11.2",
    "google-cloud-aiplatform>=1.107.0",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "plotly>=6.2.0",
    "requests>=2.32.3",
    "starlette>=0.46.2",
    "uvicorn>=0.35.0",
]
